--- a/students/kukuruza_maxim/exam-2/src/_map.html
+++ b/students/kukuruza_maxim/exam-2/src/_map.html
@@ -1,12 +1,6 @@
-<!-- <section class="map" id="map">
-    <iframe
-  width="450"
-  height="250"
-  frameborder="0" style="border:0"
-  referrerpolicy="no-referrer-when-downgrade"
-  src="
-  https://maps.googleapis.com/maps/api/staticmap?key=YOUR_API_KEY&center=40.622109209784846,-73.94736361209625&zoom=13&format=png&maptype=roadmap&style=feature:administrative.land_parcel%7Celement:labels%7Cvisibility:off&style=feature:poi%7Celement:labels.text%7Cvisibility:off&style=feature:poi.business%7Cvisibility:off&style=feature:road%7Celement:labels.icon%7Cvisibility:off&style=feature:road.arterial%7Celement:labels%7Cvisibility:off&style=feature:road.highway%7Celement:labels%7Cvisibility:off&style=feature:road.local%7Cvisibility:off&style=feature:road.local%7Celement:labels%7Cvisibility:off&style=feature:transit%7Cvisibility:off&size=480x360
-"
-  allowfullscreen>
-</iframe>
-</section> -->
+<section class="map" id="map">
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d44068.1247057762!2d-73.9418897356946!3d40.628393127874126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1701612770558!5m2!1sen!2sus"
+    class="map-emb" style="width: 100vw; height: 450px;" allowfullscreen="true" loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
