--- a/students/kukuruza_maxim/exam-2/src/_header.html
+++ b/students/kukuruza_maxim/exam-2/src/_header.html
@@ -5,10 +5,10 @@
                 <nav class="menu">
                     <img class="logo" src="./images/logo.png" alt="">
                     <ul class="menu__nav">
-                        <li class="menu__item"><a class="menu__link" href="#">about us</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">projects</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">news</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">contact</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#top">about us</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#wwd">projects</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#news">news</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#footer">contact</a></li>
                         <ul class="menu__social">
                             <li class="menu__social-item"><img src="./images/fb.png" alt="facebook"></li>
                             <li class="menu__social-item"><img src="./images/twitter.png" alt="twitter"></li>
@@ -26,10 +26,10 @@
                                     <path
                                         d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
                                 </svg></a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">about us</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">projects</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">news</a></li>
-                        <li class="menu__item"><a class="menu__link" href="#">contact</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#top">about us</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#wwd">projects</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#news">news</a></li>
+                        <li class="menu__item"><a class="menu__link" href="#footer">contact</a></li>
                         <ul class="menu__social">
                             <li class="menu__social-item"><img src="./images/fb.png" alt="facebook"></li>
                             <li class="menu__social-item"><img src="./images/twitter.png" alt="twitter"></li>
