--- a/students/kukuruza_maxim/exam-2/src/_hero.html
+++ b/students/kukuruza_maxim/exam-2/src/_hero.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="arrow">
-        <a class="arrow__down" href="#trade_center"></a>
+        <a class="arrow__down" href="#wwd"> </a>
     </div>
 
 </section>
