--- a/students/kukuruza_maxim/exam-2/src/_latest-news.html
+++ b/students/kukuruza_maxim/exam-2/src/_latest-news.html
@@ -1,4 +1,4 @@
-<section class="lt-news">
+<section class="lt-news" id="news">
     <h1>LATEST NEWS</h1>
     <div class="container">
         <div class="lt-news__carousel">
