--- a/students/kukuruza_maxim/exam-2/src/_what-we-do.html
+++ b/students/kukuruza_maxim/exam-2/src/_what-we-do.html
@@ -1,4 +1,4 @@
-<section class="wwd">
+<section class="wwd" id="wwd">
 
     <h1 class="wwd-title">WHAT WE DO</h1>
     @@include("./_trade-center.html")
