--- a/students/tiselko_iryna/exam_js-module/src/_about.html
+++ b/students/tiselko_iryna/exam_js-module/src/_about.html
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="row">
             <h3 class="about__heading">What we do</h3>
-            <div class="col-7 col-md-6 col-sm-12 about__img-wrapper">
+            <div class="col-7 col-lg-6 col-sm-12 about__img-wrapper">
                 <img src="images/about/about_1.jpg" alt="New York City" width="630" height="470" class="about__img">
             </div>
-            <div class="col-5 col-md-6 col-sm-12 about__content-wrapper">
+            <div class="col-5 col-lg-6 col-sm-12 about__content-wrapper">
                 <p class="about__suptitle">ONE WORLD</p>
                 <h3 class="about__title">TRADE CENTER</h3>
                 <p class="about__content">Increasing prosperity in our lives can be accomplished by having the
@@ -20,7 +20,7 @@
                     <span class="subcontent-text">New York City, United States - 1776 feet</span>
                 </p>
             </div>
-            <div class="col-5 col-md-6 col-sm-12 about__content-wrapper-reverse">
+            <div class="col-5 col-lg-6 col-sm-12 about__content-wrapper-reverse">
                 <p class="about__suptitle">INTERNATIONAL</p>
                 <h3 class="about__title">COMMERCE CENTRE</h3>
                 <p class="about__content">Successful businesses have many things in common, today we’ll look at
@@ -36,7 +36,7 @@
                     <span class="subcontent-text">Hong Kong - 1588 feet</span>
                 </p>
             </div>
-            <div class="col-7 col-md-6 col-sm-12 about__img-wrapper-reverse">
+            <div class="col-7 col-lg-6 col-sm-12 about__img-wrapper-reverse">
                 <img src="images/about/about_2.jpg" alt="Hong Kong" width="630" height="470" class="about__img">
             </div>
         </div>
