--- a/students/tiselko_iryna/exam_js-module/src/_hero.html
+++ b/students/tiselko_iryna/exam_js-module/src/_hero.html
@@ -5,6 +5,8 @@
             <div class="container hero-slider__container">
                 <h1 class="hero-slider__title">SIMPLE &amp; MODERN</h1>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+            </div>
+            <div>
                 <a href="#about" class="smoothScrollDown__link">
                     <svg class="hero-slider__icon icon">
                         <use xlink:href="#arrow"></use>
@@ -17,6 +19,8 @@
             <div class="container hero-slider__container">
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+            </div>
+            <div>
                 <a href="#about" class="smoothScrollDown__link">
                     <svg class="hero-slider__icon icon">
                         <use xlink:href="#arrow"></use>
@@ -29,6 +33,8 @@
             <div class="container hero-slider__container">
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+            </div>
+            <div>
                 <a href="#about" class="smoothScrollDown__link">
                     <svg class="hero-slider__icon icon">
                         <use xlink:href="#arrow"></use>
@@ -41,6 +47,8 @@
             <div class="container hero-slider__container">
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+            </div>
+            <div>
                 <a href="#about" class="smoothScrollDown__link">
                     <svg class="hero-slider__icon icon">
                         <use xlink:href="#arrow"></use>
@@ -53,6 +61,8 @@
             <div class="container hero-slider__container">
                 <h2 class="hero-slider__title">SIMPLE &amp; MODERN</h2>
                 <p class="hero-slider__subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+            </div>
+            <div class="hero-slider__scrollDownBtn">
                 <a href="#about" class="smoothScrollDown__link">
                     <svg class="hero-slider__icon icon">
                         <use xlink:href="#arrow"></use>
