--- a/students/tiselko_iryna/exam_js-module/src/_gallery.html
+++ b/students/tiselko_iryna/exam_js-module/src/_gallery.html
@@ -18,7 +18,7 @@
                 <img src="./images/gallery/img_5.jpg" alt="" class="gallery__img">
             </a>
             <a href="./images/gallery/img_6.jpg" data-fancybox="gallery"
-                class="gallery__item gallery__item item_hidden _hidden">
+                class="gallery__item gallery__item item_hidden _hidden xxs">
                 <img src="./images/gallery/img_6.jpg" alt="" class="gallery__img">
             </a>
             <a href="./images/gallery/img_7.jpg" data-fancybox="gallery"
@@ -37,7 +37,7 @@
             <a href="./images/gallery/img_11.jpg" data-fancybox="gallery" class="gallery__item item_hidden _hidden">
                 <img src="./images/gallery/img_11.jpg" alt="" class="gallery__img">
             </a>
-            <a href="./images/gallery/img_12.jpg" data-fancybox="gallery" class="gallery__item item_hidden _hidden">
+            <a href="./images/gallery/img_12.jpg" data-fancybox="gallery" class="gallery__item item_hidden _hidden xxs">
                 <img src="./images/gallery/img_12.jpg" alt="" class="gallery__img">
             </a>
             <a href="./images/gallery/img_13.jpg" data-fancybox="gallery"
