--- a/students/kukuruza_maxim/exam-2/src/_footer.html
+++ b/students/kukuruza_maxim/exam-2/src/_footer.html
@@ -47,7 +47,7 @@
                     <div class="form__label">
 
                         <!-- <button class="btn more-btn" type="submit">Submit</button> -->
-                        <input type="submit" class="btn more-btn" value="Sign Up">
+                        <input type="submit" class="btn more-btn" value="Submit">
                     </div>
                 </form>
             </div>
