--- a/students/kukuruza_maxim/exam-2/src/_latest-news.html
+++ b/students/kukuruza_maxim/exam-2/src/_latest-news.html
@@ -11,39 +11,42 @@
                     </p>
                     <div class="frame__user">
                         <img src="./images/user-1.jpg" alt="user" class="frame__user-img">
-                        <p class="user-name">ALJA BRUN</p>
-                        <p class="user-date">20 Jan 2020</p>
+                        <div class="frame__user-text">
+                            <p class="user-name">ALJA BRUN</p>
+                            <p class="user-date">20 Jan 2020</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="frame__card col-3 col-sm-1">
-
                 <img src="./images/news-img2.jpg" alt="news" class="frame__img">
                 <div class="frame__card-text">
                     <h3 class="frame__title">EFFECTIVE ADVERTISING POINTERS.</h3>
                     <p class="frame__desc">Having a home based business is a wonderful asset to your life...</p>
                     <div class="frame__user">
                         <img src="./images/user-2.jpg" alt="user" class="frame__user-img">
-                        <p class="user-name">DOMINIC FREEMAN</p>
-                        <p class="user-date">13 Dec 2019</p>
+                        <div class="frame__user-text">
+                            <p class="user-name">DOMINIC FREEMAN</p>
+                            <p class="user-date">13 Dec 2019</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="frame__card col-3 col-sm-1">
-
                 <img src="./images/news-img3.jpg" alt="news" class="frame__img">
                 <div class="frame__card-text">
                     <h3 class="frame__title">HYPNOTIZE YOURSELF INTO THE GHOST.</h3>
                     <p class="frame__desc">There are many things that are important to catalog design...</p>
                     <div class="frame__user">
                         <img src="./images/user-3.jpg" alt="user" class="frame__user-img">
-                        <p class="user-name">ALICE WARD</p>
-                        <p class="user-date">30 Nov 2019</p>
+                        <div class="frame__user-text">
+                            <p class="user-name">ALICE WARD</p>
+                            <p class="user-date">30 Nov 2019</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="frame__card col-3 col-sm-1">
-
                 <img src="./images/news-img2.jpg" alt="news" class="frame__img">
                 <div class="frame__card-text">
                     <h3 class="frame__title">EFFECTIVE ADVERTISING POINTERS.</h3>
@@ -51,8 +54,10 @@
                     </p>
                     <div class="frame__user">
                         <img src="./images/user-2.jpg" alt="user" class="frame__user-img">
-                        <p class="user-name">DOMINIC FREEMAN</p>
-                        <p class="user-date">13 Dec 2019</p>
+                        <div class="frame__user-text">
+                            <p class="user-name">DOMINIC FREEMAN</p>
+                            <p class="user-date">13 Dec 2019</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -64,8 +69,10 @@
                         life...</p>
                     <div class="frame__user">
                         <img src="./images/user-2.jpg" alt="user" class="frame__user-img">
-                        <p class="user-name">DOMINIC FREEMAN</p>
-                        <p class="user-date">13 Dec 2019</p>
+                        <div class="frame__user-text">
+                            <p class="user-name">DOMINIC FREEMAN</p>
+                            <p class="user-date">13 Dec 2019</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -77,8 +84,10 @@
                         life...</p>
                     <div class="frame__user">
                         <img src="./images/user-2.jpg" alt="user" class="frame__user-img">
-                        <p class="user-name">DOMINIC FREEMAN</p>
-                        <p class="user-date">13 Dec 2019</p>
+                        <div class="frame__user-text">
+                            <p class="user-name">DOMINIC FREEMAN</p>
+                            <p class="user-date">13 Dec 2019</p>
+                        </div>
                     </div>
                 </div>
             </div>
