--- a/students/kukuruza_maxim/exam-2/src/_gallery.html
+++ b/students/kukuruza_maxim/exam-2/src/_gallery.html
@@ -1,29 +1,36 @@
 <section class="gallery">
-    <input class="chb" name="chb" id="chb" type="checkbox">
     <h1>GALLERY</h1>
-    <div class="gallery container row">
+    <div class="gallery container">
         <div class="gallery-list col-md-8">
-            <div class="gallery-img-lg"><img src="./images/g-1.jpg" alt=""></div>
-            <div class="gallery-img-sm1 img-res"><img src="./images/g-2.jpg" alt=""></div>
-            <div class="gallery-img-sm2 img-res"><img src="./images/g-3.jpg" alt=""></div>
-            <div class="gallery-img-sm3 img-res"><img src="./images/g-4.jpg" alt=""></div>
-            <div class="gallery-img-sm4 img-res"><img src="./images/g-5.jpg" alt=""></div>
+            <a class="gallery__img-first" href="./images/g-1.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-lg" src="./images/g-1.jpg" alt=""></a>
+            <a class="gallery__img" href="./images/g-2.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm1 img-res" src="./images/g-2.jpg" alt=""></a>
+            <a class="gallery__img" href="./images/g-3.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm2 img-res" src="./images/g-3.jpg" alt=""></a>
+            <a class="gallery__img" href="./images/g-4.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm3 img-res" src="./images/g-4.jpg" alt=""></a>
+            <a class="gallery__img" href="./images/g-5.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm4 img-res" src="./images/g-5.jpg" alt=""></a>
+            <a class="gallery__img-extra hidden-item hidden" href="./images/g-2.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm1 img-res " src="./images/g-2.jpg" alt=""></a>
+            <a class="gallery__img-extra hidden-item hidden" href="./images/g-3.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm2 img-res " src="./images/g-3.jpg" alt=""></a>
+            <a class="gallery__img-extra hidden-item hidden" href="./images/g-4.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm3 img-res " src="./images/g-4.jpg" alt=""></a>
+            <a class="gallery__img-extra hidden-item hidden " href="./images/g-1.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-lg  " src="./images/g-1.jpg" alt=""></a>
+            <a class="gallery__img-extra hidden-item hidden" href="./images/g-5.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm4 img-res " src="./images/g-5.jpg" alt=""></a>
+            <a class="gallery__img-extra hidden-item hidden" href="./images/g-2.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm1 img-res " src="./images/g-2.jpg" alt=""></a>
+            <a class="gallery__img-extra hidden-item hidden" href="./images/g-3.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm2 img-res " src="./images/g-3.jpg" alt=""></a>
+            <a class="gallery__img-extra hidden-item hidden" href="./images/g-4.jpg" data-lightbox="galleryimage">
+                <img class="gallery-img-sm3 img-res " src="./images/g-4.jpg" alt=""></a>
+
         </div>
-    </div>
-    <label class="btn more-btn" for="chb">
-        SEE MORE
-    </label>
-    <div class="gallery container row content">
-        <div class="gallery-list col-md-8">
-            <div class="gallery-img-sm1 img-res"><img src="./images/g-2.jpg" alt=""></div>
-            <div class="gallery-img-sm2 img-res"><img src="./images/g-3.jpg" alt=""></div>
-            <div class="gallery-img-sm3 img-res"><img src="./images/g-4.jpg" alt=""></div>
-            <div class="gallery-img-sm4 img-res"><img src="./images/g-5.jpg" alt=""></div>
-            <div class="gallery-img-lg"><img src="./images/g-1.jpg" alt=""></div>
-        </div>
-        <label class=" btn more-btn" for="chb">
-            SEE LESS
-        </label>
+        <button id="button" class="btn more-btn">See More</button>
     </div>
 
 </section>
