--- a/students/kukuruza_maxim/exam-2/src/index.html
+++ b/students/kukuruza_maxim/exam-2/src/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monticello</title>
-    <script type="text/javascript" defer src="./js/script.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
@@ -21,23 +22,11 @@
         @@include('./_map.html')
     </main>
     @@include('./_footer.html')
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
-        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript"> function showSidebar() {
-            const sidebar = document.querySelector('.sidebar');
-            sidebar.style.display = "flex"
-            sidebar.style.transform = "translateX(0%)"
-            sidebar.style.transition = "all .2s ease .3s"
-        }
-        function hideSidebar() {
-            const sidebar = document.querySelector('.sidebar');
-            sidebar.style.transform = "translateX(100%)"
-            sidebar.style.transition = ".2s all ease .3s"
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="./js/script.js"></script>
 
-
-        }</script>
 </body>
 
 </html>
