fix image_01 to 01

--- a/students/yeremenko_denys/exam_02/src/html/_gallery.html
+++ b/students/yeremenko_denys/exam_02/src/html/_gallery.html
@@ -3,36 +3,36 @@
         <h2 class="gallery__title">GALLERY</h2>
         <div class="gallery-box">
             <div class="gallery-box__big">
-                <a href="./images/image_gl_01.jpg" class="glightbox">
-                    <img src="./images/image_gl_01.jpg" alt="image" class="glight-image big" />
+                <a href="./images/01.jpg" class="glightbox">
+                    <img src="./images/01.jpg" alt="image" class="glight-image big" />
                 </a>
             </div>
             <div class="gallery-box__small">
-                <a href="images/image_gl_02.jpg" class="glightbox">
-                    <img src="images/image_gl_02.jpg" alt="image" class="glight-image" />
+                <a href="images/02.jpg" class="glightbox">
+                    <img src="images/02.jpg" alt="image" class="glight-image" />
                 </a>
-                <a href="images/image_gl_03.jpg" class="glightbox">
-                    <img src="images/image_gl_03.jpg" alt="image" class="glight-image" />
+                <a href="images/03.jpg" class="glightbox">
+                    <img src="images/03.jpg" alt="image" class="glight-image" />
                 </a>
-                <a href="images/image_gl_04.jpg" class="glightbox">
-                    <img src="images/image_gl_04.jpg" alt="image" class="glight-image" />
+                <a href="images/04.jpg" class="glightbox">
+                    <img src="images/04.jpg" alt="image" class="glight-image" />
                 </a>
-                <a href="images/image_gl_05.jpg" class="glightbox">
-                    <img src="images/image_gl_05.jpg" alt="image" class="glight-image" />
+                <a href="images/05.jpg" class="glightbox">
+                    <img src="images/05.jpg" alt="image" class="glight-image" />
                 </a>
             </div>
             <div class="gallery-box__bottom">
-                <a href="images/image_gl_06.jpg" class="glightbox">
-                    <img src="images/image_gl_06.jpg" alt="image" class="glight-image" />
+                <a href="images/06.jpg" class="glightbox">
+                    <img src="images/06.jpg" alt="image" class="glight-image" />
                 </a>
-                <a href="images/image_gl_07.jpg" class="glightbox">
-                    <img src="images/image_gl_07.jpg" alt="image" class="glight-image" />
+                <a href="images/07.jpg" class="glightbox">
+                    <img src="images/07.jpg" alt="image" class="glight-image" />
                 </a>
-                <a href="images/image_gl_08.jpg" class="glightbox">
-                    <img src="images/image_gl_08.jpg" alt="image" class="glight-image" />
+                <a href="images/08.jpg" class="glightbox">
+                    <img src="images/08.jpg" alt="image" class="glight-image" />
                 </a>
-                <a href="images/image_gl_09.jpg" class="glightbox">
-                    <img src="images/image_gl_09.jpg" alt="image" class="glight-image" />
+                <a href="images/09.jpg" class="glightbox">
+                    <img src="images/09.jpg" alt="image" class="glight-image" />
                 </a>
             </div>
         </div>
