--- a/students/kukuruza_maxim/exam-2/src/_footer.html
+++ b/students/kukuruza_maxim/exam-2/src/_footer.html
@@ -67,3 +67,4 @@
         </div>
     </div>
 </footer>
+<div class="arrow-top"><a href="#top"><img src="./images/arrow-top.png" alt="scroll-to-top"></a></div>
