--- a/students/kukuruza_maxim/exam-2/src/_hero.html
+++ b/students/kukuruza_maxim/exam-2/src/_hero.html
@@ -36,4 +36,8 @@
             </div>
         </div>
     </div>
+    <a href="#wwd">
+        <div class="arrow__down">
+        </div>
+    </a>
 </section>
