--- a/students/kukuruza_maxim/exam-2/src/index.html
+++ b/students/kukuruza_maxim/exam-2/src/index.html
@@ -14,7 +14,7 @@
 
 <body>
     @@include('./_header.html')
-    <main class="main">
+    <main class="main" id="top">
         @@include('./_hero.html')
         @@include('./_what-we-do.html')
         @@include('./_latest-news.html')
@@ -24,7 +24,7 @@
     @@include('./_footer.html')
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <!-- <script type="text/javascript" src="slick/slick.min.js"></script> -->
     <script src="./js/script.js"></script>
 
 </body>
