--- a/students/kukuruza_maxim/exam-2/src/_footer.html
+++ b/students/kukuruza_maxim/exam-2/src/_footer.html
@@ -45,9 +45,7 @@
                         <small></small>
                     </div>
                     <div class="form__label">
-
-                        <!-- <button class="btn more-btn" type="submit">Submit</button> -->
-                        <input type="submit" class="btn more-btn" value="Submit">
+                        <button type="submit" class="btn more-btn" value="Submit">Submit</button>
                     </div>
                 </form>
             </div>
