--- a/students/kukuruza_maxim/exam-2/src/_footer.html
+++ b/students/kukuruza_maxim/exam-2/src/_footer.html
@@ -45,7 +45,8 @@
                         <small></small>
                     </div>
                     <div class="form__label">
-                        <button type="submit" class="btn more-btn" value="Submit">Submit</button>
+
+                        <button class="btn more-btn" type="submit">Submit</button>
                     </div>
                 </form>
             </div>
