--- a/students/rybalka_illia/exam_01/src/index.html
+++ b/students/rybalka_illia/exam_01/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
-    <title>Exam Denys</title>
+    <title>Travel With Us</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
